force-app/main/default/objects/All_Payment__c/All_Payment__c.object-meta.xml
<CustomObject>
    <label>All Payment(Deprecated)</label>
    <nameField>
        <displayFormat>PN-{000000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>