force-app/main/default/objects/All_Payment__c/fields/ResultCode__c.field-meta.xml
<CustomField>
    <fullName>ResultCode__c</fullName>
    <label>ResultCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>