force-app/main/default/objects/All_Payment__c/recordTypes/Quote_Payment.recordType-meta.xml
<RecordType>
    <fullName>Quote_Payment</fullName>
    <active>true</active>
    <label>Quote Payment</label>
</RecordType>