force-app/main/default/objects/All_Payment__c/validationRules/Quote_Status_Should_Be_Final.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Status_Should_Be_Final</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(Quote__r.Status__c, &#39;Final&#39;) || ISPICKVAL(Quote__r.Status__c, &#39;Deposited&#39;))</errorConditionFormula>
    <errorMessage>Related quote is not final.</errorMessage>
</ValidationRule>